style changes and fixed textwrap

--- a/style.css
+++ b/style.css
@@ -1,12 +1,27 @@
-#container {
-    margin-left:20px;
+body, html {
+    background-color:black;
+    color:white;
+    margin:0;
+    padding:0;
+    color:#c0c0c0;
 }
 
 h1, h2, p {
-    margin:0px;
+    margin:10px 0 10px 0;
+}
+
+h1, h2 {
+    color:white;
     text-align:center;
-    margin-bottom:10px;
-    margin-top:10px;
+}
+
+h1, h2, p, li.row-title {
+    font-family: "Goudy Old Style",Garamond,"Big Caslon","Times New Roman",serif;
+}
+
+h1, h2, li.row-title, li.followers {
+    text-transform: capitalize;
+    white-space:normal;
 }
 
 p {
@@ -17,39 +32,28 @@ p {
 
 #compare {
     white-space:nowrap;
+    margin-left:180px;
 }
 
-#compare > li, li.row-title {
+#compare li {
     width:100px;
-    margin-right:20px;
     padding:10px;
     display:inline-block;
+    border-right:1px solid rgb(66,66,76);
 }
 
-#compare > li.followers {
-    border:1px solid gray;
-    background-color:black;
-    color:white;
-    border-radius:5px;
+#compare li > div:last-child {
+    height:25px !important;
 }
 
-#masterlist li.followers {
-    list-style-type:none;
-    border-bottom:1px dashed black;
-    padding:10px;
+#compare li.followers {
+    cursor:move;
 }
 
-#masterlist li.followers:first-child {
-    border-top:1px dashed black;
-}
-
-#masterlist li.followers:hover {
-    background-color:yellow;
-}
-
-#masterlist > ul {
-    padding:0;
-    margin:0;
+li.followers {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size:10pt;
+    color:#576a6b;
 }
 
 li.row-title {
@@ -57,16 +61,37 @@ li.row-title {
     font-weight:bold;
 }
 
-#compare li > div, li.row-title > div {
-    display:block;
-    height:100px;
+#masterlist {
+    overflow-y:scroll;
+    padding:0 20px 0 20px;
+    position:absolute;
+    top:0;
+    bottom:0;
+    height:100%;
+    width:200px;
 }
 
-#masterlist {
-    float:left;
-    width:200px;
-    border-right:1px dashed black;
-    padding-right:20px;
+#masterlist li.followers {
+    list-style-type:none;
+    padding:10px;
+    cursor:pointer;
+}
+
+#masterlist li.followers:first-child {
+    border-top:1px solid rgb(66,66,76);
+}
+
+#masterlist li.followers:hover {
+    color:white;
+}
+
+#masterlist > ul {
+    padding:0;
+    margin:0;
+}
+
+#compare li > div, li.row-title > div {
+    height:100px;
 }
 
 #masterlist li > div {
@@ -78,7 +103,7 @@ li.row-title {
 }
 
 button {
-    width:100px;
+    width:85px;
     display:block;
     margin-right:auto;
     margin-left:auto;
@@ -86,7 +111,7 @@ button {
 }
 
 .selected {
-    background-color:yellow;
+    color:white !important;
 }
 
 .ui-sortable-placeholder{
